--- a/index.html
+++ b/index.html
@@ -12,23 +12,21 @@
     <div class="properties">
         <div class="property" id="property1">
             <h2>Neuquen 266</h2>
-            <button onclick="addTenantCard('property1')">Agregar Inquilina</button>
+            <button onclick="addTenantCard(1)">Agregar Inquilina</button>
             <div class="tenants" id="tenants-property1"></div>
         </div>
         <div class="property" id="property2">
             <h2>Neuquen 274</h2>
-            <button onclick="addTenantCard('property2')">Agregar Inquilina</button>
+            <button onclick="addTenantCard(2)">Agregar Inquilina</button>
             <div class="tenants" id="tenants-property2"></div>
         </div>
         <div class="property" id="property3">
             <h2>Santa Rosa 1459</h2>
-            <button onclick="addTenantCard('property3')">Agregar Inquilina</button>
+            <button onclick="addTenantCard(3)">Agregar Inquilina</button>
             <div class="tenants" id="tenants-property3"></div>
         </div>
     </div>
 
-
-    
     <script src="./JS/app.js"></script>
 </body>
 </html>
